--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>React multilevel navbar</title>
 </head>
 
 <main id="root"></main>
 
-<body>
-    <script src="./src/index.js"></script>
+<body 
+    <script src="index.js"></script>
 </body>
 
 </html>
