--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <title>React multilevel navbar</title>
 </head>
 
 <main id="root"></main>
 
-<body 
+<body style="margin: 0">
     <script src="index.js"></script>
 </body>
 
